Clype : aws is working